--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <header class="header">
+      <p class="title">Study Programming</p>
+    </header>
     <%= yield %>
   </body>
 </html>
