--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,17 @@
  *= require_tree .
  *= require_self
  */
+
+
+ .header{
+    width: 100%;
+    height: 70px;
+    background-color: #000080;
+ }
+
+ .title{
+   padding-top:20px;
+   text-align: center;
+   font-size: 30px;
+   color: white;
+ }
