--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <header class="header">
-      <p class="title">Study Programming</p>
+      <p class="title"><%= link_to "Study Programming", root_path, class:"logo" %></p>
     </header>
     <%= yield %>
   </body>
