--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,5 @@
 <div>
   <p class="main">Study Programming<br>ここはプログラミングの学習をするにあたって便利なまとめサイトです。</p>
-  <p class="body">→<%= link_to "一覧へ",  class:"link" %></p>
+  <p class="body">→<%= link_to "一覧へ", lists_path,  class:"link" %></p>
 </div>
 
